--- a/css/style.css
+++ b/css/style.css
@@ -1748,7 +1748,7 @@ ol {
   width: 100%;
   background-color: rgb(37, 37, 37);
   overflow: hidden;
-  height: 270px;
+  height: 310px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1761,9 +1761,7 @@ ol {
 }
 
 .large__gif video{
-  width: 100%;
-  height: 270px;
-  object-fit: cover;
+  width: inherit;
 }
 
 .project-block{
